<resources>
    <string name="app_name">Calculator2.0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multtiplication">*</string>
    <string name="division">/</string>
    <string name="ewual">=</string>
    <string name="percentage">%</string>
    <string name="plus_munis">+/-</string>
    <string name="backscape"><![CDATA[<=]]></string>
    <string name="dot">.</string>
</resources>