<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/problem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="0"
            android:textColor="#888787"
            android:textSize="50dp"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6">

        </TextView>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text=""
            android:textColor="@color/white"
            android:textSize="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.973">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:id="@+id/clear"
                android:text="C"
                android:textSize="30dp"
                app:cornerRadius="1000px"
                android:backgroundTint="#454343"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:id="@+id/plus_minus"
                android:text="@string/plus_munis"
                android:textSize="30dp"
                app:cornerRadius="1000px"
                android:backgroundTint="#454343"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:text="@string/percentage"
                android:id="@+id/persenage"
                android:textSize="30dp"
                app:cornerRadius="1000px"
                android:backgroundTint="#454343"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:text="@string/division"
                android:textSize="30dp"
                android:id="@+id/division"
                app:cornerRadius="1000px"
                android:backgroundTint="#6A00FF"
                >

            </com.google.android.material.button.MaterialButton>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/seven"
                android:layout_margin="7dp"
                android:text="7"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/eight"
                android:layout_margin="7dp"
                android:text="8"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/nine"
                android:layout_margin="7dp"
                android:text="9"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:id="@+id/multiolication"
                android:text="@string/multtiplication"
                android:textSize="30dp"
                app:cornerRadius="100dp"
                android:backgroundTint="#6A00FF"
                >

            </com.google.android.material.button.MaterialButton>


        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/four"
                android:layout_margin="7dp"
                android:text="4"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/five"
                android:layout_margin="7dp"
                android:text="5"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/six"
                android:layout_margin="7dp"
                android:text="6"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:id="@+id/minus"
                android:text="@string/minus"
                android:textSize="30dp"
                app:cornerRadius="1000dp"
                android:backgroundTint="#6A00FF"
                >

            </com.google.android.material.button.MaterialButton>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:id="@+id/one"
                android:text="1"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:id="@+id/two"
                android:text="2"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:id="@+id/three"
                android:text="3"
                style="@style/mybutton"
                >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:text="@string/add"
                android:id="@+id/plus"
                android:textSize="30dp"
                app:cornerRadius="1000dp"
                android:backgroundTint="#6A00FF"
                >

            </com.google.android.material.button.MaterialButton>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                style="@style/mybutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:text="@string/dot">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                style="@style/mybutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:text="0">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bacscape"
                style="@style/mybutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:text="@string/backscape">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#6A00FF"
                android:text="@string/ewual"
                android:textSize="30dp"
                app:cornerRadius="1000dp">

            </com.google.android.material.button.MaterialButton>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>